# microservices

./: .gitignore  README.md  docker.sh
Order Service/: pom.xml
client/: Dockerfile  nuxt.config.ts  package.json  tsconfig.json
client/layouts/: default.vue
client/middleware/: auth.global.js
client/pages/: customers.vue  index.vue  login.vue  orders.vue  signup.vue  warehouse.vue
client/stores/: auth.js
helm/v1/: Chart.yaml  build-deps.sh  values.yaml
k8s/auth/: config-map.yml  deployment.yaml  ingress.yaml  secret.yml  service.yaml
k8s/client/: deployment.yaml  ingress.yaml  service.yaml
k8s/customers/: config-map.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/orders/: config-map.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/warehouse/: config-map.yaml  deployment.yaml  ingress.yaml  secret.yaml  (+1 more)
services/shipments/: .env  Cargo.toml  Dockerfile  Dockerfile.migrations  refinery.toml
services/shipments/entity/: Cargo.toml
services/shipments/entity/src/: lib.rs  prelude.rs  sea_orm_active_enums.rs  shipment.rs
services/shipments/migration/: Cargo.toml
services/shipments/migration/src/: lib.rs  m20220101_000001_create_shipments.rs  main.rs
services/shipments/src/: main.rs  routes.rs
services/shipments/src/lib/: json_extractor.rs  mod.rs  rest_response.rs
services/shipments/src/models/: shipment.rs
services/shipments/src/routes/: shipments.rs
services/shipments/src/routes/shipments/: create_shipment.rs  delete_shipment.rs  get_shipment.rs  get_shipments.rs  patch_shipment.rs
test/: main.go
(+92 files in other folders)
