[package]
name = "shipment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
validator = { version = "0.16.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
bcrypt = "0.13.0"
sqlx = { version = "0.6.2", features = ["offline", "runtime-tokio-native-tls", "postgres", "macros", "time", "uuid", "chrono"] }
jsonwebtoken = "8.1.1"
hmac = "0.12.1"
sha2 = "0.10.6"
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
reqwest = "0.11.13"
migration = { path = "migration" }
entity = { path = "entity" }

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace]
members = [".", "migration", "entity"]
